[Feature] search with predicates and pabeable added
